<resources>
    <string name="app_name">Application-Interim</string>
    <string name="bouton_utilisateur">Utilisateur</string>
    <string name="bouton_anonyme">Anonyme</string>
    <string name="bouton_entreprise">Entreprise</string>
    <string name="bouton_rechercher">Rechercher</string>
    <string name="bouton_menu">MENU</string>
    <string name="text_seconnecter">"Se connecter "</string>
    <string name="text_continuer">Continuer en tant que :</string>
    <string name="text_trouver_job">Trouvez le job de vos reves !!!</string>
    <string name="text_inscription">"Cliquez ici pour vous inscrire "</string>
    <string name="text_s_inscrire">S\'inscrire</string>
    <string name="nom_d_utilisateur">Nom d\'utilisateur</string>
    <string name="mot_de_passe">Mot de passe</string>
    <string name="se_connecter">Se connecter</string>
    <string name="date_offre">Publiée le:</string>
    <string name="type_de_contrat">Type de contrat:</string>
    <string name="voir_plus">VOIR PLUS</string>
    <string name="email">Email</string>
    <string name="numero_de_telephone">Numéro de télephone (facultatif)</string>
    <string name="date_de_naissance">Date de naissance (facultatif)</string>
    <string name="nationalit">Nationalité</string>
    <string name="prenom">Prenom</string>
    <string name="nom">Nom</string>
    <string name="mot_de_pass">Mot de passe</string>
    <string name="ville_facultatif">Ville (facultatif)</string>
    <string name="button_telecharger_cv">Télécharger votre CV</string>
    <string name="nom_de_l_entreprise">Nom de l\'entreprise</string>
    <string name="email_facultatif">Email</string>
    <string name="numero_de_telephone_entreprise">Numéro de télephone</string>
    <string name="adresse_de_l_entreprise">Adresse de l\'entreprise</string>
    <string name="site_web">Site web</string>
    <string name="annuler">Annuler</string>
    <string name="pays">Pays</string>
    <string name="region">Région</string>
    <string name="ville">Ville</string>
    <string name="remuneration">Rémunération</string>
    <string name="description">Décrire ici les missions du poste, les compétences requises</string>
    <string name="intitule_du_poste">Intitulé du poste</string>
    <string name="ajouter_nouvelle_offre">Ajouter une nouvelle offre</string>
    <string name="candidature_apercu_default" >Candidature</string>
    <string name="candidature_acceptee" >Candidatures acceptée(s)</string>
    <string name="autre_candidature" ><u>Voir les autres candidatures ...</u></string>
    <string name="votre_profil">Votre profil :</string>
    <string name="description_missions">Description missions</string>
    <string name="postuler">POSTULER</string>
    <string name="vos_missions">Vos missions :</string>
    <string name="description1">Description</string>
    <string name="ville_r_gion">Ville , région</string>
    <string name="titre_offre">TITRE OFFRE</string>
    <string name="accepter">Accepter</string>
    <string name="refuser">Refuser</string>
    <string name="consulter">Consulter</string>


</resources>