<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".view.OffreActivity">


    <!--Page 6 et 17 combiner activer les boutons en bas pour avoir bon rendu -->
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <!-- Bouton Menu -->
        <Button
            android:id="@+id/btn_menu"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_marginStart="4dp"
            android:layout_marginTop="31dp"
            android:backgroundTint="#02C37e"
            android:text="Menu"
            android:textColor="#FFFFFF" />

        <!-- Image à côté du bouton Menu -->


        <ImageView
            android:id="@+id/image_offre"
            android:layout_width="138dp"
            android:layout_height="123dp"
            android:layout_alignParentEnd="true"
            android:src="@drawable/logo2" />

        <TextView
            android:id="@+id/titre_offre"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/btn_menu"
            android:layout_marginLeft="40dp"
            android:layout_marginTop="69dp"
            android:layout_marginRight="45dp"
            android:inputType="textCapCharacters"
            android:minHeight="55dp"
            android:text="@string/titre_offre"
            android:textColor="#5C9F7F"
            android:textSize="30sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/localisation_offre"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/titre_offre"
            android:layout_alignParentLeft="true"
            android:layout_marginLeft="45dp"
            android:layout_marginTop="-19dp"
            android:layout_marginRight="45dp"
            android:inputType="textCapCharacters"
            android:minHeight="55dp"
            android:text="@string/ville_r_gion"
            android:textSize="15sp"
            android:textStyle="italic" />


        <LinearLayout
            android:id="@+id/detail_offre"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/localisation_offre"
            android:layout_marginLeft="45dp"
            android:layout_marginTop="5dp"
            android:layout_marginEnd="20dp"
            android:layout_marginRight="45dp"
            android:layout_marginBottom="80dp"
            android:orientation="vertical">

            <TextView
                android:id="@+id/description_offre"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="45dp"
                android:layout_marginTop="5dp"
                android:layout_marginRight="45dp"
                android:padding="13dp"
                android:text="@string/description1"
                android:textSize="15sp" />

            <TextView
                android:id="@+id/mission_titre"
                android:layout_width="match_parent"
                android:layout_height="80dp"
                android:layout_marginLeft="45dp"
                android:layout_marginTop="10dp"
                android:layout_marginRight="45dp"
                android:padding="13dp"
                android:text="@string/vos_missions"
                android:textColor="#5C9F7F"
                android:textSize="22dp" />

            <TextView
                android:id="@+id/mission"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="45dp"
                android:layout_marginTop="5dp"
                android:layout_marginRight="45dp"
                android:text="@string/description_missions"
                android:textSize="15sp" />

            <TextView
                android:id="@+id/profil_titre"
                android:layout_width="match_parent"
                android:layout_height="80dp"
                android:layout_marginLeft="45dp"
                android:layout_marginTop="10dp"
                android:layout_marginRight="45dp"
                android:padding="13dp"
                android:text="@string/votre_profil"
                android:textColor="#5C9F7F"
                android:textSize="22dp" />

            <TextView
                android:id="@+id/profil"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="45dp"
                android:layout_marginTop="5dp"
                android:layout_marginRight="45dp"
                android:padding="5dp"
                android:text="@string/description_missions"
                android:textSize="15sp" />

        </LinearLayout>

        <Button
            android:id="@+id/postuler"
            android:layout_width="300dp"
            android:layout_height="48dp"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:layout_marginEnd="8dp"
            android:backgroundTint="#02C37e"
            android:text="@string/postuler"
            android:textColor="#FFFFFF"
            android:textSize="16sp" />

    </RelativeLayout>

</ScrollView>

