<!-- offer_item_fragment.xml -->

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="16dp"
    android:background="@color/light_vert">


        <TextView
            android:id="@+id/text_date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_marginStart="10dp"
            android:text="@string/date_offre"
            android:textColor="@color/gris"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/text_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/text_date"
            android:layout_alignParentStart="true"
            android:layout_marginStart="10dp"
            android:textSize="16sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/text_contract_type"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/text_title"
            android:layout_alignParentStart="true"
            android:layout_marginStart="10dp"
            android:text="@string/type_de_contrat"
            android:textSize="16sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/text_region"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/text_contract_type"
            android:layout_alignParentStart="true"
            android:layout_marginStart="10dp"
            android:textSize="16sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/btn_see_more"
            android:layout_width="wrap_content"
            android:layout_height="37dp"
            android:layout_below="@id/text_region"
            android:layout_alignParentEnd="true"
            android:layout_marginTop="-25dp"
            android:layout_marginEnd="9dp"
            android:backgroundTint="@color/vert"
            android:text="@string/voir_plus"
            android:textAlignment="center"
            android:textColor="#FFFFFF" />

</RelativeLayout>
