<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white">

        <!-- Logo ImageView -->
        <ImageView
            android:id="@+id/logoImageView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginStart="28dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="28dp"
            android:src="@drawable/logo2" />


        <TextView
            android:id="@+id/text_s_inscrire"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/text_s_inscrire"
            android:textColor="#4a4d54"
            android:textSize="24sp"
            android:layout_below="@id/logoImageView"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="16dp"/>


        <!-- Champ de texte pour le nom d'utilisateur -->
        <LinearLayout
            android:id="@+id/layoutinscription"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/logoImageView"
            android:layout_marginStart="20dp"
            android:layout_marginTop="40dp"
            android:layout_marginEnd="20dp"
            android:orientation="vertical">

            <EditText
                android:id="@+id/nomEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="16dp"
                android:background="@color/edit_text_background"
                android:hint="@string/nom_de_l_entreprise"
                android:padding="13dp"
                android:paddingStart="8dp"
                android:paddingEnd="8dp" />

            <EditText
                android:id="@+id/emailEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="16dp"
                android:background="@color/edit_text_background"
                android:hint="@string/email_facultatif"
                android:padding="13dp"
                android:paddingStart="8dp"
                android:paddingEnd="8dp" />

            <EditText
                android:id="@+id/numeroEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="16dp"
                android:background="@color/edit_text_background"
                android:hint="@string/numero_de_telephone_entreprise"
                android:inputType="number"
                android:padding="13dp"
                android:paddingStart="8dp"
                android:paddingEnd="8dp" />



            <EditText
                android:id="@+id/adresseEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="16dp"
                android:background="@color/edit_text_background"
                android:hint="@string/adresse_de_l_entreprise"
                android:padding="13dp"
                android:paddingStart="8dp"
                android:paddingEnd="8dp" />

            <EditText
                android:id="@+id/sitewebEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="16dp"
                android:background="@color/edit_text_background"
                android:hint="@string/site_web"
                android:padding="13dp"
                android:paddingStart="8dp"
                android:paddingEnd="8dp" />



            <EditText

                android:id="@+id/linkedinEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="16dp"
                android:background="@color/edit_text_background"
                android:hint="Linkedin (facultatif)"
                android:padding="13dp"
                android:paddingStart="8dp"
                android:paddingEnd="8dp" />





            <EditText
                android:id="@+id/facebookEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="16dp"
                android:background="@color/edit_text_background"
                android:hint="Facebook (facultatif)"
                android:padding="13dp"
                android:paddingStart="8dp"
                android:paddingEnd="8dp" />

            <EditText
                android:id="@+id/autrereseauEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="16dp"
                android:background="@color/edit_text_background"
                android:hint="Autre réseau social (facultatif)"
                android:padding="13dp"
                android:paddingStart="8dp"
                android:paddingEnd="8dp" />


            <EditText
                android:id="@+id/mdpEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="16dp"
                android:background="@color/edit_text_background"
                android:hint="Mot de passe"
                android:inputType="textPassword"
                android:padding="13dp"
                android:paddingStart="8dp"
                android:paddingEnd="8dp" />

        </LinearLayout>
        <Button
            android:id="@+id/inscriptionButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="90dp"
            android:backgroundTint="#02C37e"
            android:textSize="25sp"
            android:layout_centerHorizontal="true"
            android:layout_below="@+id/layoutinscription"
            android:text="S'inscrire"/>



    </RelativeLayout>
</ScrollView>
