<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"

    android:layout_height="match_parent"
    android:background="@color/white">

    <!-- Bouton Menu -->


    <Button
        android:id="@+id/btn_menu"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/bouton_menu"
        android:backgroundTint="#02C37e"
        android:textColor="#FFFFFF"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"/>

    <!-- Image en dessous du bouton Menu -->
    <ImageView
        android:id="@+id/image_offre"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/logo2"
        android:layout_below="@id/btn_menu"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="32dp"/>

    <!-- Texte "Trouver job" en dessous de l'image -->
    <TextView
        android:id="@+id/text_trouver_job"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/text_trouver_job"
        android:textColor="#02C37e"
        android:textSize="24sp"
        android:layout_below="@id/image_offre"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="16dp"/>

    <LinearLayout
        android:id="@+id/layoutrecherche"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/text_trouver_job"
        android:layout_marginStart="20dp"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="20dp"
        android:orientation="vertical">

        <EditText
            android:id="@+id/editTextQuoi"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="16dp"
            android:background="@color/edit_text_background"
            android:hint="Quoi?"
            android:padding="13dp"
            android:paddingStart="8dp"
            android:paddingEnd="8dp"
            />

        <!-- Votre ListView initiallement invisible -->
        <ListView
            android:id="@+id/listViewQuoi"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/editTextQuoi"
            android:visibility="gone" />


        <EditText
            android:id="@+id/editTextOu"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="16dp"
            android:background="@color/edit_text_background"
            android:hint="Ou?"
            android:padding="13dp"
            android:paddingStart="8dp"
            android:paddingEnd="8dp" />

        <ListView
            android:id="@+id/listViewOu"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/editTextOu"
            android:visibility="gone" />

        <EditText
            android:id="@+id/quandEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="16dp"
            android:background="@color/edit_text_background"
            android:hint="Quand"
            android:padding="13dp"
            android:paddingStart="8dp"
            android:paddingEnd="8dp"
            android:inputType="none"
            android:clickable="true"
            android:focusable="false" />
    </LinearLayout>

    <Button
        android:id="@+id/btn_rechercher_offre"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/bouton_rechercher"
        android:layout_centerHorizontal="true"
        android:layout_below="@id/layoutrecherche"
        android:textColor="#FFFFFF"
        android:backgroundTint="#02C37e"
        android:textSize="25sp"
        android:layout_marginTop="32dp"/>

</RelativeLayout>
